experimenting with java memory limits